# rzem-ai-inference-demo

./: .env.example  Cargo.toml  IMPLEMENTATION_COMPLETE.md  QUICKSTART.md  README.md  TESTING.md  example.sh  run.sh
src/: compare.rs  download.rs  lib.rs  lora.rs  main.rs  models.rs  pipeline.rs
