[package]
name = "flux-lora-demo"
version = "0.1.0"
edition = "2021"
description = "Educational demo of FLUX.1-dev with LoRA adapters using Candle"
authors = ["rzem-ai"]
license = "MIT"

[dependencies]
# Candle ML (rzem-ai fork with LoRA support for quantized models)
candle-core = { git = "https://github.com/rzem-ai/candle.git", version = "0.9.2" }
candle-nn = { git = "https://github.com/rzem-ai/candle.git", version = "0.9.2" }
candle-transformers = { git = "https://github.com/rzem-ai/candle.git", version = "0.9.2" }

# HuggingFace Hub + model formats
hf-hub = { version = "0.4", features = ["tokio"] }
tokenizers = "0.20"
safetensors = "0.4"

# Image handling
image = "0.25"
png = "0.17"

# Utilities
anyhow = "1.0"
clap = { version = "4.4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
half = "2.4"
rand = "0.8"
dirs = "5.0"
serde_json = "1.0"

# =============================================================================
# Platform-specific GPU acceleration (Linux CUDA 12.8)
# =============================================================================
[target.'cfg(target_os = "linux")'.dependencies]
candle-core = { git = "https://github.com/rzem-ai/candle.git", version = "0.9.2", features = ["cuda"] }
candle-nn = { git = "https://github.com/rzem-ai/candle.git", version = "0.9.2", features = ["cuda"] }
candle-transformers = { git = "https://github.com/rzem-ai/candle.git", version = "0.9.2", features = ["cuda"] }

# =============================================================================
# Platform-specific GPU acceleration (macOS Metal)
# =============================================================================
[target.'cfg(target_os = "macos")'.dependencies]
candle-core = { git = "https://github.com/rzem-ai/candle.git", version = "0.9.2", features = ["metal"] }
candle-nn = { git = "https://github.com/rzem-ai/candle.git", version = "0.9.2", features = ["metal"] }
candle-transformers = { git = "https://github.com/rzem-ai/candle.git", version = "0.9.2", features = ["metal"] }
